# parsemind-studio

./: .gitignore  CMakeLists.txt  README.md  installer.iss
backend_py/: main.py  requirements.dev.txt  requirements.txt
backend_py/app/: detect.py  main.py
ui_shell/: ApiClient.cpp  ApiClient.h  BackendManager.cpp  BackendManager.h  CMakeLists.txt  PythonBackend.cpp  PythonBackend.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
